tweak data table, fix button group spacing

--- a/app/styles/ember-appuniversum/_c-button-group.scss
+++ b/app/styles/ember-appuniversum/_c-button-group.scss
@@ -7,11 +7,13 @@
   vertical-align: middle;
   margin-right: $au-unit-tiny;
   margin-bottom: $au-unit-tiny;
+  margin-top: $au-unit-tiny;
 }
 
 .au-c-button-group .au-c-button--large {
   margin-right: $au-unit-small;
   margin-bottom: $au-unit-small;
+  margin-top: $au-unit-small;
 
   .au-c-icon {
     vertical-align: middle;
