--- a/app/styles/ember-appuniversum/_c-data-table.scss
+++ b/app/styles/ember-appuniversum/_c-data-table.scss
@@ -6,12 +6,14 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  overflow: auto;
+  justify-content: flex-start;
+  flex-grow: 1;
+  height: 100%;
+  overflow: hidden;
 }
 
 .au-c-data-table__actions {
-
+  flex-shrink: 1;
 }
 
 .au-c-data-table__actions--top {
@@ -20,7 +22,7 @@
 
 .au-c-data-table__actions--bottom {
   padding: $au-unit-small $au-unit;
-  border-top: .2rem solid $au-gray-200;
+  border-top: .1rem solid $au-gray-300;
 }
 
 .au-c-data-table__search {
@@ -42,21 +44,28 @@
   padding: $au-unit-tiny $au-unit-small;
 }
 
+.au-c-data-table__wrapper {
+  flex-grow: 999;
+  overflow: auto;
+  position: relative;
+}
+
 .au-c-data-table__table {
   @include au-font-size($au-h6);
-  flex-grow: 1;
   display: table;
   position: relative;
   width: 100%;
-  overflow: auto;
   border-collapse: collapse;
 
   thead {
+    position: relative;
+    z-index: $au-z-index-alpha;
     border: 0;
+    @include au-font-size($au-base,1.2);
   }
 
-  tr + tr {
-    border-top: .1rem solid $au-gray-200;
+  tbody tr {
+    border-bottom: .1rem solid $au-gray-300;
   }
 
   tbody tr:nth-child(odd) {
@@ -67,10 +76,20 @@
     background-color: $au-white;
   }
 
+  th {
+    text-align: left;
+    padding: $au-unit-tiny $au-unit-small;
+  }
+
+  td {
+    padding: $au-unit-small;
+  }
+
   th,
   td {
-    text-align: left;
-    padding: $au-unit-small;
+    min-width: 18ch;
+    max-width: 55ch;
+    position: relative;
   }
 
   th:first-child,
@@ -81,25 +100,34 @@
   th:last-child,
   td:last-child {
     padding-right: $au-unit;
+    min-width: 0;
   }
 
   th + th,
   td + td {
-    border-left: .1rem dotted $au-gray-200;
+    &:after {
+      content: "";
+      display: block;
+      position: absolute;
+      width: .1rem;
+      left: -.1rem;
+      top: 0;
+      height: 100%;
+      border-left: .1rem dotted $au-gray-300;
+    }
   }
 }
 
 .au-c-data-table__header {
   position: sticky;
   top: 0;
+  box-shadow: 0 .1rem 0 .1rem $au-gray-300;
+  background-color: $au-white;
 
   th {
     border: 0;
     outline: 0;
-  }
-
-  th {
-    box-shadow: 0 .1rem 0 .1rem $au-gray-200;
+    background-color: $au-white;
   }
 
   &:after {
@@ -110,7 +138,7 @@
     left: 0;
     top: 0;
     height: .1rem;
-    background-color: $au-gray-200;
+    background-color: $au-gray-300;
   }
 }
 
@@ -164,5 +192,5 @@
 }
 
 .au-c-data-table__message {
-  border-bottom: .1rem solid $au-gray-200;
+  border-bottom: .1rem solid $au-gray-300;
 }
